--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "watcher-service",
   "version": "1.0.0",
-  "type": "module",
   "scripts": {
-    "migrate": "node --loader ts-node/esm src/migrate.ts",
-    "dev": "ts-node --esm src/index.ts",
-    "start": "node src/index.js",
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "ts-node src/index.ts",
+    "start": "node dist/index.js",
+    "migrate": "ts-node src/migrate.ts",
+    "seed": "node dist/scripts/seed-test-data.js",
+    "setup": "npm run build && npm run migrate && npm run seed"
   },
   "dependencies": {
     "express": "^4.18.2",
     "pg": "^8.11.3",
-    "base58check": "^2.0.0",
     "cors": "^2.8.5",
     "helmet": "^7.1.0"
   },
@@ -19,6 +19,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.8.0",
     "@types/pg": "^8.10.9",
+    "@types/cors": "^2.8.17",
     "ts-node": "^10.9.0",
     "typescript": "^5.2.0"
   }
